force-app/main/default/objects/Referral_Code__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Tulsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>