force-app/main/default/objects/Referral_Code__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partners</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Codes</relationshipLabel>
    <relationshipName>Referral_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>